# emacs-webrender

./: .gitignore  Cargo.toml  Makefile.in  configure.ac  guix.scm  manifest.scm  meson.build  meson_options.txt
.github/workflows/: emacs-webrender.yml
admin/charsets/: Makefile.in
admin/grammars/: Makefile.in
admin/unidata/: Makefile.in
build-aux/: buildobj_h.sh  invoke_script  lisp_meson.sh
doc/emacs/: Makefile.in
etc/: meson.build
leim/: Makefile.in  meson.build
lib/: Makefile.in  meson.build
lib-src/: meson.build
lisp/: Makefile.in  cus-edit.el  faces.el  help-fns.el  image.el  meson.build  simple.el  startup.el
lisp/emacs-lisp/: icons.el
lisp/international/: emoji.el
lisp/net/: browse-url.el
ports/: meson.build
ports/be-app/: meson.build
ports/nextstep/: meson.build
ports/pgtk/: meson.build
ports/w32/: meson.build
ports/webrender/: meson.build  wrfns.c  wrgui.h  wrterm.c  wrterm.h
ports/x11/: meson.build
src/: Makefile.in  Makefile_meson.mk.in  conf_post.h  dispextern.h  emacs.c  frame.c  frame.h  ftfont.h  image.c  lisp.h  lread.c  meson.build  nsterm.m  process.c  wrterm.c  xfaces.c
src/emacs-sys/: meson.build
src/lisp_types/: Cargo.toml
src/lisp_types/src/: lib.rs
src/wr/: cbindgen.toml
src/wr/src/: event_loop.rs  lib.rs  output.rs
test/: meson.build
