executable('emacsclient', sources : [
  libgnu_tgt,
  'emacsclient.c',
], include_directories : inc_dirs)

make_docfile_tgt = executable('make-docfile', sources : [
  libgnu_tgt,
  'make-docfile.c',
], include_directories : inc_dirs)

make_fingerprint_tgt = executable('make-fingerprint', sources : [
  libgnu_tgt,
  'make-fingerprint.c',
], include_directories : inc_dirs)
